       	  Bruno Harbulot.
       	- Clarified concurrency constraints on Uniform/Restlet subclasses 
       	  and on Resource class. Suggested by Bruno Harbulot.
       	- Added public Resource#getAllowedMethods() method.
       	- Allow the routing of URIs with or without taking into 
       	  account the query part. Suggested by Jim Alateras and 
       	  contributed by Bruno Dumon.
    - NRE and Extension Enhancements
        - Added a static HttpServletRequest getRequest(Request) method
          to the Servlet extension.
        - DirectoryResource now exposes isDirectoryTarget() and 
          isFileTarget() methods. Suggested by Jean-Yves Cronier.
        - Enhanced WADL extension to support all WADL description 
          properties and both formatting and parsing. Also added new
          WadlRepresentation and WadlResource classes to facilitate the
          description of Resources as WADL documents. 
          Sponsored by NetDev Ltd (http://www.netdev.co.uk).
        - The Apache HTTP Client extension can now have a retry handler
          parameter set. Suggested by Sanjay Acharya.        
    - Misc
        - Refactored WAR client to remove remaining class in NRE core.
        - Updated GWT JAR to 1.5 RC1

- 1.1 Milestone 4 (2008-05-20)
    - Bugs fixed
        - Fixed NPE with internal HTTP server when no reason phrase is
          available for the response status. Reported by Stephan Koops.
        - Fixed potential NPE in request processing code when a request
          was not fully set (missing properties like the method).
        - Fixed issues with chunked encoding and socket closing. 
          Contributed by Kevin Conaway.
        - Fixed potential NPE in ApplicationClientDispatcher. Reported
          by Alex Milowski.
        - Series.getValues() was not respecting the 'ignoreCase' 
          parameter. Contributed by Stephan Koops.
        - Allowed only UTF-8 character set for JsonRepresentation. 